Run pipenv install in docker and install twine

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.7.3-stretch
 COPY install.sh /build/install.sh
+COPY Pipfile /build/Pipfile
+COPY Pipfile.lock /build/Pipfile.lock
 RUN /build/install.sh
 WORKDIR /workspace/app
 ENV HOME /workspace/app
