--- a/app/makefile
+++ b/app/makefile
@@ -1,4 +1,6 @@
 
+ARGS ?= "--python 3.7"
+
 .PHONY: help
 help:
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-15s\033[0m %s\n", $$1, $$2}'
@@ -8,8 +10,8 @@ help:
 _build: ## Prepare Docker Image
 	python -m pip install pipenv
 
-.PHONY: _initpipenv
-_initpipenv: ## Prepare Docker Image
+.PHONY: _pipenv
+_pipenv: ## Prepare Docker Image
 	pwd
-	python -m pipenv --python 3.7
+	python -m pipenv $(ARGS)
 
