Using pipenv-all

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,6 @@
-FROM ubuntu:18.04
+FROM 3amigos/pipenv-all:latest
 COPY install.sh /build/install.sh
-COPY Pipfile /build/Pipfile
-COPY Pipfile.lock /build/Pipfile.lock
+COPY pipenv /build/pipenv
 RUN /build/install.sh
 WORKDIR /workspace/app
 ENV HOME /workspace/app
