Use pipenv-all to get all the python versions pipenv supports

--- a/app/pipenv/3.6/Pipfile
+++ b/app/pipenv/3.6/Pipfile
@@ -6,6 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+flake8 = "*"
+pylint = "*"
+bandit = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.6"
