--- a/app/pipenv/2.7/Pipfile
+++ b/app/pipenv/2.7/Pipfile
@@ -6,7 +6,26 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pytest = "<4"
+atomicwrites = "==1.3.0"
+attrs = "==19.1.0"
+configparser = "==3.7.4"
+contextlib2 = "==0.5.5"
+enum34 = "==1.1.6"
+funcsigs = "==1.0.2"
+importlib-metadata = "==0.18"
+more-itertools = "==5.0.0"
+packaging = "==19.0"
+pathlib2 = "==2.3.4"
+pluggy = "==0.12.0"
+py = "==1.8.0"
+pyparsing = "==2.4.0"
+pytest = "==4.6.4"
+scandir = "==1.10.0"
+setuptools = "==41.0.1"
+six = "==1.12.0"
+typing = "==3.7.4"
+wcwidth = "==0.1.7"
+zipp = "==0.5.1"
 
 [requires]
 python_version = "2.7"
