--- a/app/pip/3.5/requirements.txt
+++ b/app/pip/3.5/requirements.txt
@@ -1,10 +1,11 @@
-twine
-wheel
 bandit
 flake8
+pipefish
+plumbum
 pylint
 pytest
 pytest-azurepipelines42
 pytest-cov
 pytest-xdist
-plumbum
+twine
+wheel
