--- a/app/.pyspelling.yml
+++ b/app/.pyspelling.yml
@@ -4,7 +4,7 @@ matrix:
 - name: python
   sources:
   - setup.py
-  - 'pymodulenamegoeshere/**/*.py'
+  - 'pytest_buildkite/**/*.py'
   - 'tests/**/*.py'
   hunspell:
     d: docs/src/dictionary/hunspell/en_US
