--- a/app/.pylintrc
+++ b/app/.pylintrc
@@ -54,7 +54,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=useless-object-inheritance
+disable=useless-object-inheritance,bad-continuation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -91,7 +91,7 @@ score=yes
 [REFACTORING]
 
 # Maximum number of nested blocks for function / method body
-max-nested-blocks=8
+max-nested-blocks=5
 
 # Complete name of functions that never returns. When checking for
 # inconsistent-return-statements if a never returning function is called then
@@ -433,19 +433,19 @@ known-third-party=enchant
 [DESIGN]
 
 # Maximum number of arguments for function / method
-max-args=8
+max-args=5
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=12
+max-attributes=7
 
 # Maximum number of boolean expressions in a if statement
 max-bool-expr=5
 
 # Maximum number of branch for function / method body
-max-branches=40
+max-branches=12
 
 # Maximum number of locals for function / method body
-max-locals=20
+max-locals=15
 
 # Maximum number of parents for a class (see R0901).
 max-parents=7
@@ -457,10 +457,10 @@ max-public-methods=20
 max-returns=6
 
 # Maximum number of statements in function / method body
-max-statements=80
+max-statements=50
 
 # Minimum number of public methods for a class (see R0903).
-min-public-methods=0
+min-public-methods=2
 
 
 [EXCEPTIONS]
